logs/describe.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/describe'...
Compiling './lib/python3.5/site-packages/describe/frozen_dict.py'...
***   File "./lib/python3.5/site-packages/describe/frozen_dict.py", line 26
    raise TypeError, '%(class)r does not support item assignment.' % {
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/describe/main.py'...
***   File "./lib/python3.5/site-packages/describe/main.py", line 20
    except AssertionError, ae:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/describe/mock'...
Compiling './lib/python3.5/site-packages/describe/mock/new_mock.py'...
***   File "./lib/python3.5/site-packages/describe/mock/new_mock.py", line 92
    raise error, message
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/describe/mock/utils.py'...
***   File "./lib/python3.5/site-packages/describe/mock/utils.py", line 5
    def __init__(self, (name, args, kwargs, is_property)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/describe/spec.py'...
***   File "./lib/python3.5/site-packages/describe/spec.py", line 49
    except AssertionError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/describe/value'...
Compiling './lib/python3.5/site-packages/describe/value/mixins.py'...
***   File "./lib/python3.5/site-packages/describe/value/mixins.py", line 173
    raise TypeError, "No function specified."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/describe/value/values.py'...
***   File "./lib/python3.5/site-packages/describe/value/values.py", line 66
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/describe-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/bowling.py'...
***   File "./lib/python3.5/site-packages/tests/bowling.py", line 15
    raise Exception, "Not Implemented"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/crypto_problem.py'...
***   File "./lib/python3.5/site-packages/tests/crypto_problem.py", line 88
    print len(eq.get_all())
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_exceptions.py'...
***   File "./lib/python3.5/site-packages/tests/test_exceptions.py", line 24
    raise TypeError, "Oh no"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_expectation_errors.py'...
***   File "./lib/python3.5/site-packages/tests/test_expectation_errors.py", line 16
    except AssertionError, e:
                         ^
SyntaxError: invalid syntax

Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
